# ranger

./: .ranger.yaml  .rusty-hook.toml  Cargo.toml
.github/workflows/: release.yml
docs/: README.md
src/: args.rs  blueprint.rs  error.rs  main.rs  reference.rs
templates/example/: .ranger.yaml  README.md  {{ vars.template.name }}.md
templates/example/{{ vars.template.name }}/: example.md
templates/rust+cli/: .ranger.yaml  Cargo.toml
templates/rust+cli/docs/: README.md
templates/rust+cli/src/: args.rs  error.rs
