[package]
name = "ranger"
version = "0.0.0"
authors = ["Alexander Weber <aw@voidpointergroup.com>"]
edition = "2021"
license = "MIT"
description = "ranger is a code templating tool."
homepage = "https://github.com/replicadse/ranger"
repository = "https://github.com/replicadse/ranger"
keywords = ["ranger"]
categories = ["command-line-utilities"]
readme = "docs/README.md"

[features]
default = []

[dependencies]
async-trait = "0.1.72"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
clap = "4.3.19"
clap_complete = "4.3.2"
clap_mangen = "0.2.12"
clap-markdown = "0.1.3"
serde = { version = "1.0.175", features = ["derive"] }
serde_yaml = "0.9.25"
serde_json = "1.0.103"
bytes = "1.4.0"
mime = "0.3.17"
anyhow = "1.0.72"
thiserror = "1.0.44"
git2 = "0.19.0"
walkdir = "2.5.0"
handlebars = "5.1.2"
uuid = { version = "1.9.1", features = ["v4"] }

[dev-dependencies]
rusty-hook = "0.11.2"
