[package]
name = "{{ vars.app.name }}"
version = "0.0.0"
authors = ["{{ vars.author.name }} <{{ vars.author.email }}>"]
edition = "2021"
license = "MIT"
description = "{{ vars.app.description }}"
homepage = "{{ vars.app.repo }}"
repository = "{{ vars.app.repo }}"
keywords = {{ vars.app.cargo.keywords }}
categories = {{ vars.app.cargo.categories }}
readme = "docs/README.md"

[features]
default = []

[dependencies]
async-trait = "0.1.72"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
clap = "4.3.19"
clap_complete = "4.3.2"
clap_mangen = "0.2.12"
clap-markdown = "0.1.3"
serde = { version = "1.0.175", features = ["derive"] }
serde_yaml = "0.9.25"
serde_json = "1.0.103"
bytes = "1.4.0"
mime = "0.3.17"
anyhow = "1.0.72"
thiserror = "1.0.44"

[dev-dependencies]
rusty-hook = "0.11.2"
